public enum Assertion {
    Equal, NotEqual, Null, NotNull, Same, NotSame,
    True, False,
    Less, Greater, LessEqual, GreaterEqual, Between,
    Letter, Digit, Whitespace, Uppercase, Lowercase, Alphanumeric,
    Contains, NotContains, StartsWith, EndsWith, LengthEqual, Empty, NotEmpty
}
