public record Variable(String value, Type type){}
